--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://centos.mingguilu.com"
+baseurl = "https://linux.mingguilu.com"
 languageCode = "zh-cn"
 title = "Linux"
 # Enable comments by entering your Disqus shortname
