--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "public"]
 	path = public
 	url = git@github.com:mingguilu/linux.mingguilu.com.git
+	url = git@git.coding.net:Mingguilu/linux.mingguilu.com.git
