--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "http://linux.mingguilu.com/"
 languageCode = "zh-cn"
-title = "Linux"
+title = "MingguiLu - Linux"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
