fix 去除Coding Pages等待跳转页面
1. 在首页footer位置放置「Hosted by Coding Pages」的文字版

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ theme = ""
     # Tell me who you're
     location = ""
     site_description = ""
-    copyright  = "Powered by [Hugo](//gohugo.io). Theme by [hugo-theme-arch](https://github.com/syui/hugo-theme-arch). Hosted by [Github](https://github.com)."
+    copyright  = "Powered by [Hugo](//gohugo.io). Theme by [hugo-theme-arch](https://github.com/syui/hugo-theme-arch). Hosted by [Coding](https://coding.net) Pages and [Github](https://github.com) Pages."
 
     # Format dates with Go's time formating
     date_format = "2006-01-02"
